# Detection-of-Manipulated-Pricing-in-Smart-Energy-CPS-Scheduling

./: COMP3217CW2Input.csv  README.md  TestingResults.txt  classifer.py  linprogTest.py  main.py  normalPriceCurve.py  pyproject.toml  schedulingSoultion.py
